--- a/M2_Novice/M1_File/app/Dockerfile.txt
+++ b/M2_Novice/M1_File/app/Dockerfile.txt
@@ -25,35 +25,36 @@ ENTRYPOINT [ "python3", "app.py" ]
 
 
 
-To ignore the virtual env pipfile 
+How To ignore the virtual env pipfile ?
 	add pipfile in .dockerignore file
 
 
-To convert docker file to docker image
-	
+How To convert docker file to docker image ?
 	docker build -t hellopython:latest .
 
-	where 
-			hellopython is image name
-			latest is the tag
-			. = in which directory Dockerfile is suituted 
-				here . represents the current directory Dockerfile is suituted
+	where
+		hellopython is image name
+		latest is the tag
+		. = in which directory Dockerfile is suituted 
+		here . represents the current directory Dockerfile is suituted
 
 	we can check it in the docker image ls
 
 
 Now, i want to run the docker image
 
-
-docker run  hellopython
+How To Run the docker image ?
+	docker run  hellopython
 	
-	here , If i run this i will get error because we didn't allocate any external port to the container
+	Here , If i run this i will get error because we didn't allocate any external port to the container
 			8082 is default port
 
+How To Run the docker image with port mapping?
 
-docker run -p 8082:8070 hellopython
+	docker run -p 8082:8070 hellopython
 
 then we can check
 
 http://127.0.0.1:8082/
 
+	
